safari image stretch fix

--- a/style.css
+++ b/style.css
@@ -156,7 +156,6 @@ body {
 	height: 70vh;
 	width: 100%;
 	text-align: center;
-	/* height: 1200px; when we open registration */
 }
 
 #venue, #contact {
@@ -191,7 +190,7 @@ body {
 .register-button {
 	display: table;
 	background: #0065ff;
-	width:fit-content;
+	width: fit-content;
 	grid-row: 5/6;
 	grid-column: 2/3;
 	text-decoration: none;
@@ -299,6 +298,10 @@ body {
 .venue-img {
 	padding: 0 !important;
 	width: 39vw;
+	object-fit: contain;
+	max-width: 100%;
+	max-height: 100%;
+	height: auto;
 }
 
 #map {
@@ -420,6 +423,9 @@ body {
 	}
 	#view-on-maps {
 		font-size: 2.5vh;
+	}
+	.venue-img {
+		width: auto;
 	}
 }
 
